--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,12 @@
+<div style="text-align: center">
 
-<div style="height: 10rem; background-color: aqua; border-radius: 1rem; margin: 2rem">
+    <div style = "font-size: 0.8rem; margin: 1.5rem;">
+        <span>공지사항</span>
+        <span>제휴문의</span>
+        <span>서비스소개</span>
+    </div>
+    <div>
+        <h6>caiyin</h6>
+    </div>
 
 </div>
