--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,14 @@
-<div style="height: 10rem; background-color: aqua; border-radius: 1rem; margin: 2rem" >
+<div style="text-align: center">
+
+    <div style="margin: 2rem 0; font-family: 'Dancing Script', cursive;">
+        <h1>caiyin</h1>
+    </div>
+
+    <div style="margin-bottom: 2rem;">
+        <span>nav1</span>
+        <span>nav2</span>
+        <span>nav3</span>
+        <span>nav4</span>
+    </div>
 
 </div>
