--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,10 @@
 <div style="text-align: center">
 
-    <div style="margin: 2rem 0; font-family: 'Dancing Script', cursive;">
+    <div class="caiyin_header_logo">
         <h1>caiyin</h1>
     </div>
 
-    <div style="margin-bottom: 2rem;">
+    <div class="caiyin_header_button">
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
