--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -7,8 +7,12 @@
 
         <h1>METHOD</h1>
 
-        <h3>{{ text }}</h3>
+        <form action ="/accounts/hello_world/" method="post">
+            {% csrf_token %}
+            <input class="btn btn-dark rounded-pill px-4" type ="submit">
+        </form>
 
+        <h3>{{ text }}</h3>
 
     </div>
 
