--- a/templates/header.html
+++ b/templates/header.html
@@ -7,8 +7,20 @@
     <div class="caiyin_header_button">
         <span>nav1</span>
         <span>nav2</span>
-        <span>nav3</span>
-        <span>nav4</span>
+
+        <span>
+            <a href="{% url 'accountapp:login' %}">
+                Login
+            </a>
+
+        </span>
+
+        <span>
+            <a href="{% url 'accountapp:create' %}">
+                Signup
+            </a>
+
+        </span>
     </div>
 
 </div>
