--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,9 @@
         <span>nav1</span>
         <span>nav2</span>
 
+
+        {% if not user.authenticated %}
+
         <span>
             <a href="{% url 'accountapp:login' %}">
                 Login
@@ -19,8 +22,16 @@
             <a href="{% url 'accountapp:create' %}">
                 Signup
             </a>
-
         </span>
+
+        {% else %}
+        <span>
+            <a href="{% url 'accountapp:logout' %}">
+                Logout
+            </a>
+        </span>
+        {% endif %}
+
     </div>
 
 </div>
