--- a/templates/header.html
+++ b/templates/header.html
@@ -9,8 +9,7 @@
         <span>nav2</span>
 
 
-        {% if not user.authenticated %}
-
+        {% if not user.is_authenticated %}
         <span>
             <a href="{% url 'accountapp:login' %}">
                 Login
@@ -25,6 +24,11 @@
         </span>
 
         {% else %}
+            <span>
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+                Mypage
+            </a>
+        </span>
         <span>
             <a href="{% url 'accountapp:logout' %}">
                 Logout
