--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -18,6 +18,13 @@
 
     </div>
 
+    <div>
+        <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
+            Quit
+        </a>
+
+    </div>
+
 </div>
 
 {% endblock %}
