--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -2,29 +2,31 @@
 {% block content %}
 
 
-<div class="text-center mw-500 m-auto">
-    <div class="m-5">
-        <h4> {{ target_user.username }} </h4>
+    <div class="text-center mw-500 m-auto">
+        <div class="m-5">
+            <h4> {{ target_user.username }} </h4>
+
+        </div>
+        <div>
+            {{ target_user.date_joined }}
+        </div>
+        {% if user == target_user %}
+
+            <div>
+                <a href="{% url 'accountapp:update' pk=target_user.pk %}">
+                    Update Info
+                </a>
+
+            </div>
+
+            <div>
+                <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
+                    Quit
+                </a>
+
+            </div>
+        {% endif %}
 
     </div>
-    <div>
-        {{ target_user.date_joined }}
-
-    </div>
-    <div>
-        <a href="{% url 'accountapp:update' pk=target_user.pk %}">
-            Update Info
-        </a>
-
-    </div>
-
-    <div>
-        <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
-            Quit
-        </a>
-
-    </div>
-
-</div>
 
 {% endblock %}
