--- a/static/base.css
+++ b/static/base.css
@@ -30,3 +30,14 @@
 
 }
 
+.round_button {
+    color: black;
+    text-decoration: none;
+    box-shadow: 0 0 3px black;
+    border-radius: 10rem;
+    padding: .3rem;
+}
+
+.round_button:hover {
+    color: dimgrey;
+}
