--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -21,8 +21,9 @@
             <div class="article_content">
                 {{ target_article.content }}
             </div>
+            {% if target_article.writer == user %}
 
-        </div>
+
         <div>
             <a href="{% url 'articleapp:update' pk=target_article.pk %}"
                 class="btn btn-success rounded-pill px-5">
@@ -34,7 +35,9 @@
             </a>
 
         </div>
+            {% endif %}
 
+    </div>
     </div>
 
 {% endblock %}
