--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -38,6 +38,11 @@
             {% endif %}
 
     </div>
+       <hr>
+
+        <div class="text-center my-4">
+            {% include 'commentapp/create.html' %}
+        </div>
     </div>
 
 {% endblock %}
