--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -5,8 +5,14 @@
 
     <style>
 
+        .container{
+            padding: 0;
+            margin: 0 auto;
+        }
+
         .container div {
-      width: 280px;
+      width: 45%;
+            max-width: 250px;
             box-shadow: 0 0 .5rem grey;
       display: flex;
       justify-content: center;
