--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -12,7 +12,10 @@
             </h2>
                 <h5> {{ target_project.description }}</h5>
         </div>
+    </div>
 
+    <div>
+        {% include 'snippets/list_caiyin.html' with article_list=object_list %}
     </div>
 
 {% endblock %}
