--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -49,4 +49,8 @@
 
     </div>
 
+    <div>
+        {% include 'snippets/list_caiyin.html' with article_list=object_list %}
+    </div>
+
 {% endblock %}
