--- a/templates/header.html
+++ b/templates/header.html
@@ -15,6 +15,12 @@
                 Projects
             </a>
         </span>
+        <span>
+            <a href="{% url 'subscribeapp:list' %}">
+                Subscription
+            </a>
+        </span>
+
 
 
         {% if not user.is_authenticated %}
