--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -8,7 +8,8 @@
             <h1 class="NNS_B">{{ target_article.title }}</h1>
             <div>
                 <a href="{% url 'likeapp:article_like' article_pk=target_article.pk %}"
-                    class="material-icons">
+                    class="material-icons"
+                    style="vertical-align: middle;font-size: 1.4rem; color: #f77 ">
                     favorite
                 </a>
                 <span>
