--- a/templates/header.html
+++ b/templates/header.html
@@ -1,53 +1,60 @@
 <div style="text-align: center">
 
     <div class="caiyin_header_logo">
-        <h1>caiyin</h1>
-    </div>
+        <h1>
+            <a href="{% url 'home' %}">
+                caiyin
+            </a>
+        </h1>
 
+    </div>
     <div class="caiyin_header_button">
-    <span>
+        <span class="mx-2">
             <a href="{% url 'articleapp:list' %}">
                 Articles
             </a>
         </span>
-        <span>
+        <span class="mx-2">
             <a href="{% url 'projectapp:list' %}">
                 Projects
             </a>
         </span>
-        {% if user.is_authenticated%}
-        <span>
+     {% if user.is_authenticated%}
+        <span class="mx-2">
             <a href="{% url 'subscribeapp:list' %}">
                 Subscription
             </a>
         </span>
-        {% endif %}
+    {% endif %}
+
 
 
         {% if not user.is_authenticated %}
-        <span>
+
+            <span class="mx-2">
             <a href="{% url 'accountapp:login' %}">
                 Login
             </a>
 
         </span>
 
-        <span>
+            <span class="mx-2">
             <a href="{% url 'accountapp:create' %}">
-                Signup
+               Signup
             </a>
-        </span>
 
+        </span>
         {% else %}
-            <span>
+            <span class="mx-2">
             <a href="{% url 'accountapp:detail' pk=user.pk %}">
                 Mypage
             </a>
         </span>
-        <span>
+            <span class="mx-2">
             <a href="{% url 'accountapp:logout' %}">
                 Logout
             </a>
+
         </span>
         {% endif %}
 
